подключила bundle для режима prod

--- a/index.html
+++ b/index.html
@@ -513,6 +513,6 @@
     </div>
 
 </div>
-<script src="./dist/dev-bundle.js" defer></script>
+<script src="./dist/bundle.js" defer></script>
 </body>
 </html>
